# LinPopUp-2

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.in
extra/: Makefile.am  Makefile.in  gtkrc
lib/: netscape_remote.c
man/: LinPopUp.1  Makefile.am  Makefile.in  linpopup.1
pixmaps/: Makefile.am  Makefile.in  del_16.xpm  del_256.xpm  icon_16.xpm  icon_256.xpm  left_16.xpm  left_256.xpm  linpopup_tray.xpm  little_igloo.xpm  min_16.xpm  min_256.xpm  new_16.xpm  new_256.xpm  reply_16.xpm  reply_256.xpm  right_16.xpm  right_256.xpm
po/: POTFILES.in  de.gmo  de.po  fr.gmo  fr.po  linpopup.pot  nl.gmo  nl.po  ru.gmo  ru.po
src/: GTKmisc.c  Makefile.am  Makefile.in  custom.c  dialog.c  docs.c  execute.c  io.c  main.c  menu.c  protos.h  recept.c  send.c  string.c  text.c  toolbar.c  tray.c  version.c  version.h
