pixmapsdir = $(datadir)/linpopup/pixmaps
pixmaps_DATA = linpopup_tray.xpm little_igloo.xpm

EXTRA_DIST = \
	del_16.xpm    reply_16.xpm \
	del_256.xpm   reply_256.xpm \
	icon_16.xpm   min_16.xpm         right_16.xpm \
	icon_256.xpm  min_256.xpm        right_256.xpm \
	left_16.xpm   new_16.xpm \
	left_256.xpm  new_256.xpm \
	$(pixmaps_DATA)
